--- a/src/App.css
+++ b/src/App.css
@@ -15,16 +15,22 @@ body {
   max-width: 800px;
   margin: auto;
 }
+
 .main_container {
   margin: 0 20px;
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
+
 .main_container-h1 {
   text-align: center;
-  color: var(--font-dark-color);
+  font-family: 'Bungee', sans-serif;
+  background: linear-gradient(to bottom, #000, #979797);
+  -webkit-background-clip: text;
+  color: transparent;
 }
+
 .search_form {
   display: flex;
   background-color: #EFEFEF;
@@ -33,12 +39,19 @@ body {
   border-radius: 10px; 
   color: var(--font-dark-color-2);
 }
+
 .search_form-input {
   border: none;
   background: transparent;
   outline: none;
   width: 100%;
+  font-size: 14px;
 }
+
+.search_form-svg {
+  font-size: 18px;
+}
+
 .add_btn {
   display: flex; 
   align-items: center;
@@ -48,8 +61,9 @@ body {
   border: 1px solid var(--border-light);
   cursor: pointer; 
   color: var(--font-dark-color);
-  font-size: 12px;
+  font-size: 14px;
 }
+
 .edit_btn {
   color: var(--font-dark-color-2);
   cursor: pointer;
@@ -58,9 +72,11 @@ body {
   background: transparent;
   border: none;
 }
+
 .todo_list {
   list-style: none;
 }
+
 .todo_list-li {
   display: flex;
   justify-content: space-between;
@@ -69,8 +85,17 @@ body {
   border-bottom: 1px solid var(--border-light);
   padding: 10px 0; 
 }
+
 .todo_list-task {
-  font-size: 12px; 
+  font-size: 14px; 
+  display: flex;
+  flex-direction: column;
+}
+
+.todo {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
 }
 
 .toolbar {
@@ -86,4 +111,30 @@ body {
 
 .spin {
   animation: spin 2s linear infinite;
+}
+
+.no_tasks {
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  font-weight: 600;
+  color: var(--font-dark-color-2);
+}
+
+.no_task-icon {
+  color: var(--font-dark-color-2);
+  font-size: 50px;
+}
+
+.loading_home {
+  height: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  font-size: 18px;
 }
