--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,15 @@ body {
   flex-direction: column;
 }
 
+.userTask {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
+
 .task_date {
   color: var(--font-dark-color-2);
 }
