--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,7 @@ body {
 .main_container-h1 {
   text-align: center;
   font-family: 'Bungee', sans-serif;
-  background: linear-gradient(to bottom, #000, #979797);
-  -webkit-background-clip: text;
-  color: transparent;
+  color: #303030;
   font-size: 28px;
 }
 
